--- a/public/css/w3.css
+++ b/public/css/w3.css
@@ -244,10 +244,19 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     color: white;
 }
 .w3-white {
-    cursor: pointer;
     color:#000!important;
     background-color:#fff;
+    cursor: pointer;
 }
 .w3-white:hover {
     background-color: #9e9e9e;
+}
+.date {
+    text-align: right;
+}
+.opphome {
+    margin-top: 5px;
+}
+.oppaway {
+    margin-bottom: 5px;
 }
