--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -8,7 +8,7 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-.loginbtn {
+.loginbtn, .querybtn {
     border: none;
     outline: 1px solid black;
     padding: 10px 16px;
@@ -17,26 +17,14 @@ input[type=text], input[type=password] {
     margin-left: 30px;
 }
 
-.loginbtn:hover {
+.loginbtn:hover, .querybtn:hover {
     background-color: black;
     color: white;
 }
 
-/* Set a style for all buttons
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
+.querybtn {
+    display: none;
 }
-
-button:hover {
-    opacity: 0.8;
-}
-*/
 
 .submitbtn {
     width: auto;
